--- a/package.json
+++ b/package.json
@@ -1,22 +1,1 @@
-{
-  "name": "orchardaid",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "tailwindcss": "^3.0.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "framer-motion": "^7.0.0"
-  },
-  "devDependencies": {
-    "typescript": "^5.0.0"
-  }
-}
+{ "name": "orchardaid", "version": "1.0.0", "scripts": { "dev": "next dev", "build": "next build", "start": "next start" }, "dependencies": { "autoprefixer": "^10.4.7", "framer-motion": "^10.12.16", "next": "13.4.12", "postcss": "^8.4.14", "react": "18.2.0", "react-dom": "18.2.0", "tailwindcss": "^3.1.8" } }
