--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.10",
+    "autoprefixer": "^10.4.2",
+    "framer-motion": "^6.5.1",
+    "next": "12.2.0",
+    "postcss": "^8.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "framer-motion": "^10.12.16"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.4.4"
   }
 }
