--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "react-dom": "18.2.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.4.4"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/node": "^18.0.0"
   }
 }
